# docksible

./: .gitignore  LICENSE.txt  README.md  _DEPRECATED_redmine_defaults.sql  dawn.py  pyproject.toml  redmine_defaults.sql
.github/: FUNDING.yml
_DEPRECATED_ansible/: django.yml  letsencrypt.yml  readme.txt  ssl-selfsigned.yml
_DEPRECATED_ansible/roles/django/templates/: docker-compose-django.yml.j2
_DEPRECATED_ansible/roles/docker-compose/tasks/: main.yml
_DEPRECATED_ansible/roles/docker-compose/templates/: .env  docker-compose.yml.j2  nginx.conf.j2  nginx.conf.j2.todo
_DEPRECATED_ansible/roles/letsencrypt/tasks/: main.yml
_DEPRECATED_ansible/roles/letsencrypt/templates/: nginx.conf.1.j2  nginx.conf.django.j2  nginx.conf.j2
_DEPRECATED_ansible/roles/redmine/tasks/: main.yml
_DEPRECATED_ansible/roles/redmine/templates/: nginx.conf.j2
_DEPRECATED_ansible/roles/ssh-proxy/tasks/: main.yml
ansible/: hosts  playbook.yml  redmine.yml
ansible/files/: docker-compose.yml
ansible/roles/build-image/tasks/: main.yml
ansible/roles/django/tasks/: main.yml
ansible/roles/django/templates/: .env  docker-compose-django.yml.j2  nginx.conf.j2
ansible/roles/docker-compose/tasks/: main.yml
ansible/roles/docker-compose/templates/: .env  docker-compose.yml.j2  nginx.conf.j2
ansible/roles/redmine/tasks/: main.yml
src/docksible/: arg_validator.py  cli.py  constants.py  docksible.py  helpers.py
src/docksible/project/: basic-docker-compose.yml  custom-app.yml  letsencrypt.yml  osem.yml  redmine.yml  setup-docker-compose.yml  wordpress.yml
test/: test_docksible.py
(+36 files in other folders)
